--- a/app/src/main/res/layout-port/activity_main.xml
+++ b/app/src/main/res/layout-port/activity_main.xml
@@ -70,7 +70,8 @@
             android:id="@+id/btnTakePic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/take_picture"/>
+            android:text="@string/take_picture"
+            android:onClick="onBtnTakePicClick"/>
     </LinearLayout>
 
 </RelativeLayout>
