--- a/app/src/main/res/layout-port/activity_main.xml
+++ b/app/src/main/res/layout-port/activity_main.xml
@@ -3,6 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/phone_portrait">
+
+    <VideoView
+        android:id="@+id/vvLastVideo"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_alignParentTop="true"
+        android:layout_margin="5dp"/>
     <ImageView
         android:id="@+id/ivLastPicture"
         android:layout_width="match_parent"
@@ -11,6 +18,7 @@
         android:background="@drawable/borders"
         android:layout_margin="5dp"/>
     <LinearLayout
+        android:id="@+id/llInfo"
         android:layout_below="@+id/ivLastPicture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,6 +87,12 @@
             android:layout_height="wrap_content"
             android:text="@string/record_video"
             android:onClick="onBtnRecordVideoClick"/>
+        <Button
+            android:id="@+id/btnChangeMode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/change_mode"
+            android:onClick="onBtnChangeModeClick"/>
     </LinearLayout>
 
 </RelativeLayout>
