--- a/app/src/main/res/layout-port/activity_main.xml
+++ b/app/src/main/res/layout-port/activity_main.xml
@@ -11,20 +11,22 @@
         android:layout_alignParentTop="true"
         android:layout_margin="5dp"/>
    <LinearLayout
-       android:layout_width="wrap_content"
-       android:layout_height="200dp"
-       android:orientation="horizontal"
+       android:layout_width="fill_parent"
+       android:layout_height="250dp"
+       android:orientation="vertical"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/ivLastPicture"
-           android:layout_width="180dp"
-           android:layout_height="match_parent"
+           android:layout_width="wrap_content"
+           android:maxWidth="280dp"
+           android:layout_height="wrap_content"
+           android:maxHeight="100dp"
            android:background="@drawable/borders"
            android:layout_margin="5dp"/>
        <LinearLayout
            android:id="@+id/llInfo"
            android:layout_width="match_parent"
-           android:layout_height="match_parent"
+           android:layout_height="wrap_content"
            android:background="@drawable/thin_border"
            android:layout_margin="5dp">
            <LinearLayout
@@ -76,7 +78,7 @@
         android:id="@+id/googleMap"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:layout_above="@+id/bottom"/>
     <LinearLayout
         android:id="@+id/pop_up_layout"
@@ -86,7 +88,9 @@
         android:layout_above="@+id/bottom"
         android:paddingBottom="30dp"
         android:background="@drawable/thin_border"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+
+        android:onClick="onPopUpClick">
         <TextView
             android:id="@+id/pop_up_title"
             android:layout_width="wrap_content"
@@ -94,7 +98,7 @@
         <ImageView
             android:id="@+id/pop_up_image"
             android:layout_width="150dp"
-            android:layout_height="200dp" />
+            android:layout_height="150dp" />
     </LinearLayout>
 
     <LinearLayout
