--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -109,7 +109,8 @@
         <TextView
             android:id="@+id/pop_up_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            style="@style/Text_Style"/>
         <ImageView
             android:id="@+id/pop_up_image"
             android:layout_width="150dp"
